# AINewsQuake

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  PROJECT_CONTEXT.md  QUICKSTART.md  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
Report & Docs/: presentation.tex  report.tex
pages/: about.py  analytics.py  impact_explorer.py
scripts/: build_impact_analysis.py  export_to_csv.py  migrate_to_cloud.sh  retry_impact_analysis.py  run_migration.py
src/: __init__.py
src/adapters/: __init__.py  alpha_vantage_client.py  databento_client.py  finnhub_client.py  fmp_client.py
src/components/: navbar.py
src/domain/: schemas.py
src/repositories/: __init__.py  models.py  timescale_repo.py
src/services/: pipeline_service.py
